[project]
name = "assistant20-tools"
version = "0.1.0"
description = "Assistant20 Tools - Collection of tools for Assistant20 service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mh-service-kit>=0.1.0b2",
    "neo4j-client",
    "pg-client",
    "minimal-harness>=0.6.1b4",
    "openpyxl>=3.1",
    "sqlglot>=25.0",
]

[tool.uv.sources]
neo4j-client = { path = "packages/neo4j-client", editable = true }
pg-client = { path = "packages/pg-client", editable = true }

[tool.uv]
index-strategy = "unsafe-best-match"
prerelease = "allow"

[project.scripts]
assistant20-tools = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "tools",
    "registry",
    "builder",
    "mining",
    "analysis",
    "scripts",
]

[dependency-groups]
staticcheck = [
    "ruff>=0.11.0",
    "pyright>=1.1.400",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
]
ignore = [
    "B008",   # Do not perform function call in argument defaults
    "B904",   # Raise without from inside except
    "ARG001", # Unused function argument
    "ARG002", # Unused method argument
    "SIM102", # Use single if statement
]

[tool.ruff.lint.isort]
known-first-party = ["hw_api_client", "neo4j_client", "pg_client", "unisearch", "tools"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
reportPrivateUsage = false
reportUnusedImport = true
reportUnusedVariable = true
exclude = [
    "**/tests/**",
]
extraPaths = [
    "packages/hw-api-client/src",
    "packages/neo4j-client/src",
    "packages/pg-client/src",
    "packages/unisearch/src",
]